--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.Collapse {
+  width: 500px;
+  margin: 20px;
+  padding: 16px;
+  border-radius: 3px;
+  border: 1px #e8e8e8 solid;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Collapse__link {
+  text-decoration: none;
+  color: rgba(11, 31, 53, 0.95);
+  border-bottom: 1px dashed rgba(11, 31, 53, 0.3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Collapse__container {
+  visibility: hidden;
+  max-height: 0px;
+  overflow: hidden;
+  transition: max-height 0.2s;  
 }
